Manejar excepción al codificar la consulta para la API de Overpass